module12/httpserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service2
spec:
  selector:
    app: httpserver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
